# LearnOpenGL-CLion

./: .gitignore  CMakeLists.txt  camera.cpp  camera.h  fragment.glsl  lightingf.glsl  main.cpp  shader.cpp  shader.h  vertex.glsl
assimp/: revision.h
src/: camera.cpp  camera.h  mesh.cpp  mesh.h  model.cpp  model.h  shader.cpp  shader.h
src/fkeyz/: mesh_instance.cpp  mesh_instance.h  texture2d.cpp  texture2d.h  texture_cubemap.cpp  texture_cubemap.h
src/shaders/: framebuffer.frag  instancing.vert  model_loading.frag  model_loading.vert  model_loadingfs.glsl  point_geometry.geom  remake_geom.geom  shader2.frag  shader3.frag  shader4.frag
